Play kannada songs by default

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
 	>
 	<nav class="navbar navbar-transparent" player-resizer="fullscreen">
 		<div class="navbar-brand col-md-12" drawer-toggle="drawer-opened">
-			Ech<i class="fa fa-headphones"></i>es Lite
+			<i class="fa fa-headphones"></i>ondesama
 			<span class="btn btn-navbar btn-link ux-maker sidebar-toggle pull-right">
 				<i class="fa fa-bars"></i>
 			</span>
