reduce youtube player width

--- a/src/css/echoes-variables.less
+++ b/src/css/echoes-variables.less
@@ -539,6 +539,6 @@
 @hr-border:                   mix(@brand-primary, @inverse, 63%);
 
 //** Horizontal forms & lists
-@component-offset-horizontal: 180px;
+@component-offset-horizontal: 80px;
 
-@drawer-width: 29.5rem;
+@drawer-width: 200px;
